tests/baselines/reference/FunctionDeclaration12_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts(1,20): error TS1005: '(' expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts(1,25): error TS1005: '=' expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts(1,28): error TS1005: '=>' expected.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts (3 errors) ====
    var v = function * yield() { }
                       ~~~~~
!!! error TS1005: '(' expected.
                            ~
!!! error TS1005: '=' expected.
                               ~
!!! error TS1005: '=>' expected.